# final-assignment

./: .gitignore  LICENSE  README.md  config.ini  script.ipynb  setup.cfg
calculate_income/: __init__.py  setup.cfg
calculate_income/calculate_income_jst/: __init__.py  jst_income_calc.py
calculate_income/calculate_income_stat/: __init__.py  variance_income_calc.py
calculate_income/calculate_income_stat/load_data_people/: __init__.py  load_people.py
data/: Tabela_IV.xls
package_calculate_income/calculate_income_jst/load_data/: load.py
package_calculate_income/calculate_income_stat/: mean_income_calc.py  variance_income_calc.py
package_calculate_income/calculate_income_stat/load_data_people/: load_people.py
results/: dochody.xlsx
