[metadata]
name = package_calculate_income
version = 0.0.1
author = Mateusz Machnowski
author_email = ma.machnowsk@student.uw.edu.pl
license = MIT
license_file = LICENSE
description = analysis of PIT income in python
long_description = file: README.md
classifiers =
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific
    Topic :: Scientific :: Visualization
    Topic :: Scientific :: Information Analysis
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    numpy >= 1.21.4
    pandas >= 1.3.4
    jupyter >= 1.0.0
